[package]
name = "rnp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tar = "0.4"
flate2 = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
semver = "1.0.26"
dirs = "5.0"
sha2 = "0.10"
sha1 = "0.10"
indicatif = "0.17"
colored = "2.1"
base64 = "0.22"
